feat: auth and client setup
