# server/docs/v1_openapi.yaml
@@ -713,9 +713,6 @@ components:
         success:
           type: boolean
 
-        token:
-          type: string
-
         onboardingCompleted:
           type: boolean
 
@@ -906,6 +903,29 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
+  /auth/logout:
+    post:
+      tags:
+        - Auth
+
+      summary: Logout User
+
+      responses:
+        "200":
+          description: Logout Success
+
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SuccessResponse"
+
+        "401":
+          description: Unauthorized
+
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   #################################################
   # ONBOARDING
   #################################################
